# microids

./: .env.example  .gitignore  LICENSE  README.md  ROUTINES.md  pyproject.toml
microids/: __init__.py  cli.py  models.py  server.py
microids/agents/: __init__.py  base.py  bedrock.py  groq.py  mock.py  ollama.py
microids/channels/: __init__.py  homeassistant.py  mock.py
microids/core/: __init__.py  events.py  executor.py  gateway.py  planner.py  recovery.py  registry.py  router.py  security.py
microids/devices/: __init__.py
tests/: __init__.py  conftest.py  test_e2e.py  test_events.py  test_mock_agent.py  test_mock_channel.py  test_models.py  test_registry.py  test_router.py  test_security.py
